--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,maxinum-scale=1.0">
     <title>招财猫</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/index.css">
@@ -89,7 +89,7 @@
         <div class="rmcp_logo">
         </div>
         <div class="rmcp_text1">
-            <a href="#">热门产品</a>
+            热门产品
         </div>
         <div class="rmcp_text2">
             <a href="#">更多</a>
@@ -99,8 +99,8 @@
 
 
     <!-- 产品 start -->
-    <a href="#">
-        <div class="cp">
+
+    <div class="cp"><a href="#">
             <div class="head">
                 <div class="text1">
                     神域计划9999号1期
@@ -134,10 +134,11 @@
                 <div class="img">
                 </div>
             </div>
-        </div>
-    </a>
-    <a href="#">
-        <div class="cp">
+        </a>
+    </div>
+
+
+    <div class="cp"><a href="#">
             <div class="head">
                 <div class="text1">
                     遮天计划8888号2期
@@ -171,10 +172,11 @@
                 <div class="img">
                 </div>
             </div>
-        </div>
-    </a>
-    <a href="#">
-        <div class="cp">
+        </a>
+    </div>
+
+
+    <div class="cp"> <a href="#">
             <div class="head">
                 <div class="text1">
                     昊天计划7777号3期
@@ -208,8 +210,9 @@
                 <div class="img">
                 </div>
             </div>
-        </div>
-    </a>
+        </a>
+    </div>
+
     <!-- 产品 end -->
 
 
@@ -274,7 +277,7 @@
     <!-- bottom start -->
     <div class="bottom">
         <div class="first">
-           <a href="">触屏版</a> | <a href="">电脑版</a> | <a href="">APP下载</a>
+            <a href="">触屏版</a> | <a href="">电脑版</a> | <a href="">APP下载</a>
         </div>
         <div class="second">
             2020招财猫理财 豫ICP备999999号
