--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </a>
         </div>
         <div class="loginArea">
-            <a href="#">注册</a>|<a href="#">登录</a>
+            <a href="#">注册</a>|<a href="login.html">登录</a>
         </div>
     </header>
     <!-- header end -->
