--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>招财猫</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="icon" href="./img/logo.png">
     <script>
         // rem适配
         window.onload = function () {
@@ -73,7 +74,7 @@
                 新手指引
             </div>
         </a>
-        <a class="box4" href="#">
+        <a class="box4" href="help.html">
             <div class="img4">
             </div>
             <div class="text">
