--- a/login-back help.html
+++ b/login-back help.html
@@ -21,7 +21,7 @@
 <body>
     <!-- header start -->
     <header>
-        <a class="back_img" href="index.html"></a>
+        <a class="back_img" href="help.html"></a>
         <span class="text">验证手机号</span>
         <a class="you_img" href="#"></a>
     </header>
