--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>招财猫</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/index.css">
+    <script type="text/javascript" src="./js/index.js"></script>
     <link rel="icon" href="./img/logo.png">
     <script>
         // rem适配
@@ -101,7 +102,7 @@
 
     <!-- 产品 start -->
 
-    <div class="cp"><a href="#">
+    <div class="cp"><a href="detail.html">
             <div class="head">
                 <div class="text1">
                     神域计划9999号1期
