--- a/detail.html
+++ b/detail.html
@@ -40,7 +40,7 @@
     <div class="body">
         <div class="top">
             <span class="text1">1000元起投</span>
-            <span class="text2">嫌弃180</span>
+            <span class="text2">限期180天</span>
         </div>
         <div class="neirong">
             <div class="text1"><i class="icon1"></i>
