--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="cp"><a href="detail.html">
             <div class="head">
                 <div class="text1">
-                    神域计划9999号1期
+                    赚钱计划9999号1期
                 </div>
                 <div class="box1">
                     <div class="text2">
@@ -143,7 +143,7 @@
     <div class="cp"><a href="#">
             <div class="head">
                 <div class="text1">
-                    遮天计划8888号2期
+                    赚钱计划8888号2期
                 </div>
                 <div class="box1">
                     <div class="text2">
@@ -181,7 +181,7 @@
     <div class="cp"> <a href="#">
             <div class="head">
                 <div class="text1">
-                    昊天计划7777号3期
+                    赚钱计划7777号3期
                 </div>
                 <div class="box1">
                     <div class="text2">
