--- a/detail.html
+++ b/detail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="html">
 
 <head>
     <meta charset="UTF-8">
@@ -17,12 +17,12 @@
     </script>
 </head>
 
-<body>
+<body id="body">
     <!-- header start -->
     <header>
         <a href="index.html"><i class="iconfont icon-fanhui"></i></a>
-        <span class="text">神域计划9999号1期</span>
-        <a href="#"><i class="iconfont icon-caidan"></i></a>
+        <span class="text">赚钱计划9999号1期</span>
+        <a id="menu"><i class="iconfont icon-caidan"></i></a>
     </header>
     <!-- header end -->
 
@@ -45,16 +45,94 @@
         <div class="neirong">
             <div class="text1"><i class="icon1"></i>
                 <p class="text11">省级律所法律支持</p>
-                <i class="icon2"></i><p class="text12">浙大友创战略入股</p>
+                <i class="icon2"></i>
+                <p class="text12">浙大友创战略入股</p>
             </div>
             <div class="text2">
-                <i class="icon3"></i><p class="text21">招财猫易贷严风控</p>
-                <i class="icon4"></i><p class="text22">千万级风险保障金</p>
+                <i class="icon3"></i>
+                <p class="text21">招财猫易贷严风控</p>
+                <i class="icon4"></i>
+                <p class="text22">千万级风险保障金</p>
             </div>
         </div>
+        <div class="process">
+            <div class="pro_all">
+                <div class="pro_wrap">
+                </div>
+            </div>
+            <div class="percentage">
+                37%
+            </div>
+        </div>
+        <div class="bottom">
+            <span class="text1">已投资<span class="text"> 37 </span>人>></span>
+            <sapn class="text2">剩余可投资<span class="text"> 9999999 </span>元</span>
+        </div>
+        <a href="#">
+            <div class="last">查看项目详情></div>
+        </a>
     </div>
-
     <!-- body end -->
+
+
+    <!-- footer start -->
+    <div class="footer">
+        <span class="text1"> <a class="shouyigusuan" href="#">收益估算</a> </span>
+        <a class="text2" href="#">立即投资</a>
+    </div>
+    <!-- footer end -->
+
+
+    <!-- mask start-->
+    <div id="mask" class="mask">
+        <div class="mask_box">
+            <a  href="#">
+                <i class="iconfont icon-zhuye"></i>
+                <div>主页</div>
+            </a>
+            <a  href="#">
+                <i class="iconfont icon-suo"></i>
+                <div>安全保障</div>
+            </a>
+            <a  href="#">
+                <i class="iconfont icon-touzi"></i>
+                <div>我要投资</div>
+            </a>
+            <a  href="#">
+                <i class="iconfont icon-jiaruwomen"></i>
+                <div>账户中心</div>
+            </a>
+        </div>
+    </div>
+    <script>
+        var a = 1;
+        let body = document.getElementById("body");
+        let html = document.getElementById("html");
+        // 得到蒙版和小导航
+        let mask = document.getElementById("mask");
+        // 得到菜单小按钮
+        let menu = document.getElementById("menu");
+        // 给按钮注册一个点击事件  
+        // 当事件发生时  会调用后面的function(){}这个函数
+        
+        
+        menu.onclick = function(){
+            mask.style.display = "block";
+            body.style.overflow="hidden";
+            html.style.overflow="hidden";
+            body.style.height="100%";
+            html.style.height="100%";
+            menu.onclick = function(){
+            mask.style.display = "none";
+            body.style.overflow="visible";
+            html.style.overflow="visible";
+            body.style.height="13.33rem";
+            html.style.height="13.33rem";         
+            }
+        }
+    </script>
+
+     <!-- mask end -->
 </body>
 
 </html>
